--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": " Franco, Miriam, Turco, Steven",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql2": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
